--- a/day24/Cargo.toml
+++ b/day24/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ahash = "0.8.2"
 itertools = "0.10.5"
 num = "0.4.0"
 petgraph = "0.6.2"
+
+[profile.release]
+debug = true
+profile = 3
